edition = "2023";

option features.field_presence = IMPLICIT;
option go_package = "myDb/rpc";

package rpc;

service RaftService {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntriesRequest {
  int64 term = 1;
  string leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  int64 leaderCommit = 5;
  repeated Entry entries = 6;
}

message Entry {
  int64 Term = 1;
  int64 Index = 2;
  string Command = 3;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
  int64 matchIndex = 3; 
}

message RequestVoteRequest {
  int64 term = 1;
  string candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}